# midterm

./: .env_sample  .gitattributes  Dockerfile  Homework.md  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  LangGraph_3_Tool_Research_Agent.ipynb  Midterm_Fine_tuning_Embedding_Models_&_Check_Updated_Metrics.ipynb  Midterm_Generate_RAG_Retrieved_Context_Base_Metrics.ipynb  Obesity_Chatbot_Midterm.ipynb  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt
data/: .gitattributes
