[project]
name = "midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "arxiv==2.1.3",
    "beautifulsoup4==4.13.3",
    "chainlit==2.2.1",
    "cohere==5.13.12",
    "faiss-cpu==1.10.0",
    "langchain",
    "langchain-cohere",
    "langchain-community>=0.3.14",
    "langchain-google-community>=0.0.7",
    "numpy==1.26.4",
    "pdfplumber",
    "pycocotools",
    "pycryptodome>=3.19.0",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-qdrant==0.2.0",
    "langgraph==0.2.61",
    "lxml==5.3.1",
    "nltk==3.8.1",
    "pyarrow==19.0.1",
    "python-dotenv>=1.0.1",
    "python-pptx==1.0.2",
    "ragas==0.2.10",
    "sentence-transformers==3.4.1",
    "websockets>=15.0",
]
